css/blog.scss
---
---

figure {
    float: right;
    display: table;
    padding-top: 10px;
}

figcaption {
    display: table-caption;
    caption-side: bottom;
}

@import "post-author";
@import 'syntax-highlight';

.post-header,
.section-latest > header {
    background: #333;
}

@media all and (min-width: 320px) {
    .post-header,
    .section-blog > header,
    .section-latest > header {
        background: #545a61 url('../img/top-bg.jpg');
		background-size: cover;
    }
}

.section-blog > header {
    padding: 3em 0 1em;
    color: #fff;
    font-weight: 300;
}

.section-blog > header a {
    color: #ffa500;
    text-decoration: none;
}

.section-latest > header {
    padding: 3em 0;
}

.section-latest section,
.section-blog > header {
    padding: 2em 0;
}

.section-title {
    margin: 0;
    font-size: 3rem;
    line-height: 1.1;
    color: #9ef490;
    font-weight: 100;
}

@media all and (min-width: 480px) {
    .section-title {
        font-size: 6rem;
    }

    .section-blog > header {
        font-size: 2rem;
    }
}

/* Home styles */
/* ----------------------------------------------------------*/

.home h1 {
    margin-bottom: 25px;
}

.posts {
    list-style-type: none;
}

.posts li {
    background: #fff;
    margin: 0 0 30px 0;
    position: relative;
    padding: 20px;
}

.section-posts {
    background: #eee;
    padding: 2em 0;
}

.section-posts h2,
.repos-box > h3 {
    color: #555;
    font-size: 2.4rem;
    font-weight: 400;
    padding: 0 0 1em 0;
    margin: 0;
}

.posts .post-link {
    font-size: 2.4rem;
    font-weight: 700;
    color: inherit;
    text-decoration: none;
}

.posts .post-link:hover,
.posts .post-link:focus {
    color: #4ba7f8;
}

.posts .post-date {
    display: block;
    color: #999;
    border-bottom: 1px solid #ccc;
    padding: 0 0 10px 0;
    margin: 0 0 10px 0;
}



.posts.posts-short {
    .post-link {
        font-size: 2rem;
    }
}


@media all and (min-width: 760px) {
    .section-posts .content {
        padding: 0 140px;
    }

    .section-twitter .content {
        padding: 0;
    }

    .section-twitter iframe {
        margin: 0 auto;
        display: block;
    }

    .posts li {
        margin-left: 70px
    }

    .posts .post-date {
        position: absolute;
        left: -70px;
        width: 70px;
    }

    .posts .post-date strong {
        display: block;
    }

    .posts-short {
        li {
            overflow: hidden;
            padding: 10px 20px;
        }

        .post-date {
            position: static;
            float: left;
            border: 1px solid #eee;
            border-width: 0 1px 0 0;
            margin-right: 20px;
        }
    }
}

.posts .post-meta {
    border-top: 1px solid #eee;
    margin: 20px -20px 0;
    padding: 20px 20px 0 20px;
    color: #555;
    text-align: right;
    overflow: hidden;
}

.posts .post-meta img {
    width: 32px;
    border-radius: 50%;
    display: inline-block;
    vertical-align: middle;
}

.posts .post-meta .author {
    margin: 0 5px 5px;
    float: left;
}

.posts .post-meta .author a {
    color: #999;
    font-size: 1.4rem;

}

.posts .post-meta .author a:hover {
    color: #333;
}

.comment-count {
    color: #999;
    font-size: 1.4rem;
    display: inline-block;
}

.comment-count:hover {
    color: #333;
}

/* Post styles */
/* ----------------------------------------------------------*/

.post-content {
    background: #fff;
    padding: 2em 0;
}

.post-content table {
    width: 100%;
}

.post-content table,
.post-content td,
.post-content th {
    border: 1px solid #ccc;
    border-collapse: collapse;
}

.post-content td,
.post-content th {
    padding: 5px 10px;
    text-align: left;
}

.post-content th {
    background: #eee
}

.post-meta {
    margin: 0;
}

.comments {
    background: #f5f5f5;
    padding: 2em 0;
}

.post-header {
    padding: 3em 0;
    color: #fff;
    font-weight: 300;
}

.post-title {
    font-size: 4rem;
    color: #9ef490;
    line-height: 1.2;
    font-weight: 300;
    margin: 0;
    padding: 0 0 0.5em;
}

.post-header a {
    color: #ddd;;
}

.post-header a:hover {
    color: #aaa;
}

.post-header .meta {
    font-size: 15px;
    color: #818181;
    margin-top: 5px;
}

.post-content a,
.post-author a {
    color: #4ba7f8;
    text-decoration: none;
}

.post-content a:hover,
.post-content a:focus,
.post-author a:hover,
.post-author a:focus {
    text-decoration: underline;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
    line-height: 1;
    font-weight: 300;
    margin: 40px 0 20px;
}

.post-content h2 {
    font-size: 34px;
}

.post-content h3 {
    font-size: 24px;
    letter-spacing: -1px;
}

.post-content h4 {
    font-size: 20px;
    letter-spacing: -1px;
}

.post-content img {
    max-width: 100%;
}

.post-content blockquote {
    border-left: 4px solid #e8e8e8;
    padding-left: 20px;
    font-size: 18px;
    opacity: .6;
    letter-spacing: -1px;
    font-style: italic;
    margin: 30px 0;
}

.post-content ul,
.post-content ol {
    padding-left: 20px;
}

.post pre,
.post code {
    border: 1px solid #d5d5e9;
    background-color: #eee;
    padding: 8px 12px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    font-size: 15px;
    overflow: auto;
}

.post p code,
.post li code {
    font-size: 18px;
    border: none;
    background: none;
    padding: 0;
}

.post code {
    padding: 1px 5px;
}

.post-content ul,
.post-content ol {
    margin-left: 1.35em;
}

.post pre code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
}

/* terminal */
.post pre.terminal {
    border: 1px solid #000;
    background-color: #333;
    color: #FFF;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.post pre.terminal code {
    background-color: #333;
}

.breadcrumb li,
.breadcrumb {
    padding: 0;
    margin: 0;
    list-style: none;
    display: inline;
}

.breadcrumb li + li span:before {
    content: ' • ';
    color: #ccc;
    padding: 0 10px 0 5px;
    display: inline-block;
}

.breadcrumb li.authors a:before {
    content: ',';
    color: #ccc;
    padding: 0 5px 0 0;
    display: inline-block;
}

.breadcrumb li.authors a:first-child:before {
    content: ' • ';
    color: #ccc;
    padding: 0 5px;
    display: inline-block;
}


/* social */

.social {
    text-align: right;
}

.social ul,
.social h4 {
    list-style: none;
    display: inline-block;
    font-size: 90%;
}

.social ul {
    margin-left: 10px;
}

.social li {
    display: inline-block;
    padding: 0;
    margin: 0;
    vertical-align: middle;
}

.ico {
    fill-rule: evenodd;
    clip-rule: evenodd;
    fill: rgba(0, 39, 59, 0.35)
}

.ico:hover {
    fill: #3f4549
}

/* youtube */
.youtube_iframe {
    margin: 0 auto;
    display: block;
}

